* Fix Array#inject recursion error in Firefox. [jddalton]

* Cleanup Feature/Bug tests and correct Element#clonePosition unit test for IE 6. [jddalton]

* Rename Element#visible to Element#isVisible. [jddalton]
  Note: Backwards compatibility warning.

* Make Element#visible work with elements that are nested in hidden parent elements or have an offsetWidth/offsetHeight of zero. [jddalton, matheusalmeida]
  Originally reported on http://dev.jquery.com/ticket/3895.

* Make $() fallback on the `expando` varaible for malformed strings to avoid passing an empty string to document.getElementById(). [jddalton]

* Rename String#strip to String#trim and add JavaScript 1.8.1 String#trimLeft and String#trimRight support. [jddalton]
  Note: Backwards compatibility warning.

* Rename Element#absolutize to Element#makeAbsolute and Element#relativize to Element#undoAbsolute. [jddalton]
  Note: Backwards compatibility warning.

* Ensure Element#cumulativeOffset works with hidden elements or elements with borders and Element#clonePosition resizes elements, with various paddings, correctly. [Prototype LH #603] [jddalton, Manuel Carrasco]

* Make Element#clonePosition work correctly when `source` is an ancestor of `element`. [jddalton]
  - Add Element._getBorderWidth(), Element._getBorderHeight(), Element._getPaddingWidth(), and Element._getPaddingHeight()
  - Element#cummulativeOffset allow a second `ancestor` argument to be used to stop iterating when it encounters the ancestor
  - Make Fuse.Browser.Bug() and Fuse.Browser.Feature() expose their internal cache object as `_object`

* Ensure Element#getOffsetParent returns the proper offsetParent for hidden elements. [Prototype LH #618] [jddalton, rvagg]

* Allow Element#getOffsetParent to return null and remove Element._getRealOffsetParent() helper. [jddalton]
  Note: Backwards compatibility warning.
