@@ -1,3 +1,5 @@
+* Optimize Enumerable.first() when passing no arguments. [jddalton]
+
 * Fix Array#inject recursion error in Firefox. [jddalton]
 
 * Cleanup Feature/Bug tests and correct Element#clonePosition unit test for IE 6. [jddalton]
